# anki-chinese-helpers

./: README.md  pyproject.toml
ankichinese/: __init__.py
